Fix: Overflow Bugs

--- a/Exercise 3 JS/assets/styles/game.css
+++ b/Exercise 3 JS/assets/styles/game.css
@@ -14,7 +14,7 @@
 }
 
 body {
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .container {
@@ -27,6 +27,10 @@ body {
 }
 
 /* ######### Type Container ######### */
+.typeContainer {
+  padding: 10px;
+}
+
 .typeContainer:hover {
   cursor: pointer;
 }
@@ -51,13 +55,13 @@ body {
 
 @media screen and (min-width: 700px) {
   #battleContainer {
-    height: 50vh;
+    height: 40vh;
   }
 }
 
 @media screen and (min-width: 1200px) {
   #battleContainer {
-    height: 65vh;
+    height: 55vh;
   }
 }
 
